--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="viewModel"
+            type="com.sharehands.sharehands_frontend.viewmodel.search.ServiceDetailViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -110,10 +112,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         tools:text="케이엠"
+                        android:text="@{viewModel.contents.nickname}"
                         android:drawableEnd="@drawable/ic_forward_dir"
                         android:drawablePadding="12dp"
                         android:gravity="center_vertical"
-                        android:textColor="@color/black"
+                        android:textColor="@color/text_color"
                         android:textStyle="bold"
                         app:layout_constraintStart_toEndOf="@id/iv_user_profile"
                         app:layout_constraintTop_toTopOf="@id/iv_user_profile"
@@ -125,11 +128,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         tools:text="나눔레벨 1"
+                        android:text="@{`나눔레벨 ` + viewModel.contents.level}"
                         app:layout_constraintTop_toBottomOf="@id/tv_user_nickname"
                         app:layout_constraintStart_toStartOf="@id/tv_user_nickname"
                         android:layout_marginTop="2dp"
                         android:textSize="12sp"
-                        android:textColor="@color/black"
+                        android:textColor="@color/text_color"
                         android:textStyle="bold"
                         />
 
@@ -141,7 +145,8 @@
                         app:layout_constraintStart_toStartOf="@id/tv_user_nickname"
                         app:layout_constraintBottom_toBottomOf="@id/iv_user_profile"
                         tools:text="4.9"
-                        android:textColor="@color/black"
+                        android:text="@{viewModel.contents.userRate.toString()}"
+                        android:textColor="@color/text_color"
                         android:gravity="center_vertical"
                         android:textSize="12sp"
                         android:drawableStart="@drawable/ic_star_filled"/>
@@ -159,6 +164,7 @@
                     android:textStyle="normal"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/layout_user_profile"
+                    android:text="@{viewModel.contents.category}"
                     tools:text="봉사 유형" />
 
                 <TextView
@@ -171,6 +177,7 @@
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="@id/tv_service_sort"
                     app:layout_constraintTop_toBottomOf="@id/tv_service_sort"
+                    android:text="@{viewModel.contents.workTitle}"
                     tools:text="봉사 제목" />
 
                 <LinearLayout
@@ -187,12 +194,13 @@
                         android:id="@+id/tv_num_review"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_review_num"
+                        android:drawableStart="@drawable/ic_eye"
                         android:drawablePadding="8dp"
                         android:textColor="@color/sharehands_green_strong"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        tools:text="100" />
+                        tools:text="100"
+                        android:text="@{viewModel.contents.hitCnt.toString()}"/>
 
                     <TextView
                         android:id="@+id/tv_num_likes"
@@ -206,7 +214,8 @@
                         android:textColor="@color/sharehands_green_strong"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        tools:text="100" />
+                        tools:text="100"
+                        android:text="@{viewModel.contents.likeCnt.toString()}"/>
 
                     <TextView
                         android:id="@+id/tv_num_scraps"
@@ -219,7 +228,8 @@
                         android:textColor="@color/sharehands_green_strong"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        tools:text="100" />
+                        tools:text="100"
+                        android:text="@{viewModel.contents.scrapCnt.toString()}"/>
 
                 </LinearLayout>
 
@@ -236,7 +246,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@id/tv_service_sort"
                     app:layout_constraintTop_toBottomOf="@id/layout_num_status"
-                    tools:text="@string/intro_test" />
+                    tools:text="@string/intro_test"
+                    android:text="@{viewModel.contents.intro}"/>
 
                 <TextView
                     android:id="@+id/tv_due_date_title"
@@ -260,7 +271,8 @@
                     android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@id/tv_due_date_title"
                     app:layout_constraintTop_toTopOf="@id/tv_due_date_title"
-                    tools:text="2023. 01. 10" />
+                    tools:text="2023. 01. 10"
+                    android:text="@{viewModel.contents.applydeadline}"/>
 
                 <TextView
                     android:id="@+id/tv_location"
@@ -275,7 +287,8 @@
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="@id/tv_service_sort"
                     app:layout_constraintTop_toBottomOf="@id/tv_due_date_content"
-                    tools:text="서울특별시 동대문구 이문동\n한국외국어대학교" />
+                    tools:text="서울특별시 동대문구 이문동\n한국외국어대학교"
+                    android:text="@{viewModel.contents.area}"/>
 
                 <TextView
                     android:id="@+id/tv_period"
@@ -289,7 +302,8 @@
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="@id/tv_service_sort"
                     app:layout_constraintTop_toBottomOf="@id/tv_location"
-                    tools:text="2023. 01. 07 ~ 2023. 02. 07" />
+                    tools:text="2023. 01. 07 ~ 2023. 02. 07"
+                    android:text="@{viewModel.contents.startDate + ` ~ ` + viewModel.contents.endDate}"/>
 
                 <TextView
                     android:id="@+id/tv_day"
@@ -304,7 +318,8 @@
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="@id/tv_service_sort"
                     app:layout_constraintTop_toBottomOf="@id/tv_period"
-                    tools:text="수요일" />
+                    tools:text="수요일"
+                    android:text="@{viewModel.contents.dow}"/>
 
                 <TextView
                     android:id="@+id/tv_time"
@@ -318,6 +333,7 @@
                     android:textStyle="bold"
                     tools:text="10:00 ~ 12:00"
                     android:layout_marginStart="8dp"
+                    android:text="@{viewModel.contents.startTime + ` ~ ` + viewModel.contents.endTime}"
                     />
 
                 <TextView
@@ -329,6 +345,7 @@
                     android:layout_marginTop="8dp"
                     android:drawableStart="@drawable/ic_people"
                     tools:text="8명"
+                    android:text="@{viewModel.contents.recruitNum + `명`}"
                     android:textColor="@color/text_color"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -344,6 +361,7 @@
                     android:layout_marginTop="8dp"
                     android:drawableStart="@drawable/ic_expense"
                     tools:text="10,000원"
+                    android:text="@{viewModel.contents.cost + `원`}"
                     android:textColor="@color/text_color"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -384,6 +402,7 @@
                     android:layout_marginEnd="24dp"
                     android:layout_marginTop="12dp"
                     tools:text="@string/detail_test_text"
+                    android:text="@{viewModel.contents.content}"
                     android:textSize="16sp"
                     android:textColor="@color/text_color"/>
 
@@ -470,7 +489,9 @@
                     app:layout_constraintStart_toEndOf="@id/separator_vertical"
                     tools:text="010-1234-5678"
                     android:textColor="@color/text_color"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:text="@{viewModel.contents.tel}"
+                    />
 
                 <TextView
                     android:id="@+id/tv_contact_mail_content"
@@ -481,7 +502,8 @@
                     app:layout_constraintStart_toEndOf="@id/separator_vertical"
                     tools:text="abc@gmail.com"
                     android:textColor="@color/text_color"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:text="@{viewModel.contents.email}"/>
 
                 <TextView
                     android:id="@+id/tv_contact_etc_content"
@@ -492,7 +514,8 @@
                     app:layout_constraintStart_toEndOf="@id/separator_vertical"
                     tools:text="비공개"
                     android:textColor="@color/text_color"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:text="@{viewModel.contents.contactEtc}"/>
 
 
                 <View
