--- a/app/src/main/res/layout/activity_permissions_agree.xml
+++ b/app/src/main/res/layout/activity_permissions_agree.xml
@@ -124,6 +124,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="28dp"
+            android:visibility="invisible"
             android:background="@drawable/rectangle_shadow"
             app:layout_constraintBottom_toTopOf="@id/layout_btn_next"
             app:layout_constraintEnd_toEndOf="parent"
