--- a/app/src/main/res/layout/activity_recruited_service.xml
+++ b/app/src/main/res/layout/activity_recruited_service.xml
@@ -58,6 +58,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:text="@{`총 ` + viewModel.recruitedNum + ` 개의 봉사를 모집했습니다.`}"
                 android:textColor="@color/sharehands_green_strong"
                 android:textSize="16sp"
                 android:textStyle="bold"
