--- a/app/src/main/res/layout/item_service_on_recruit.xml
+++ b/app/src/main/res/layout/item_service_on_recruit.xml
@@ -20,7 +20,6 @@
             android:background="@drawable/frame_preview_thumbnail"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
-            android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:layout_marginStart="12dp"
             />
@@ -208,9 +207,8 @@
             android:src="@drawable/ic_goto_recruit"
             android:padding="4dp"
             android:visibility="visible"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/iv_service_recruit_user"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="12dp"
             android:layout_marginEnd="20dp"/>
 
         <ImageView
@@ -221,6 +219,7 @@
             app:layout_constraintTop_toBottomOf="@id/iv_goto_recruit"
             app:layout_constraintStart_toStartOf="@id/iv_goto_recruit"
             android:padding="4dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintBottom_toTopOf="@id/tv_recruit_period"
             android:layout_marginBottom="8dp"/>
 
