--- a/app/src/main/res/layout/item_service_on_recruit.xml
+++ b/app/src/main/res/layout/item_service_on_recruit.xml
@@ -16,11 +16,10 @@
             android:layout_height="92dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:background="@drawable/frame_preview_thumbnail"
             android:clipToOutline="true"
+            android:layout_marginTop="20dp"
             android:scaleType="centerCrop"
-            android:layout_marginBottom="16dp"
             android:layout_marginStart="12dp"
             />
 
@@ -121,7 +120,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             tools:text="2023.01.01 ~ 2023. 01.01"
-            android:maxLength="24"
+            android:maxLength="30"
             android:textSize="11sp"
             android:textStyle="bold"
             android:textColor="@color/text_color"
@@ -143,7 +142,9 @@
             android:src="@drawable/ic_people"
             android:layout_gravity="start"
             app:layout_constraintStart_toStartOf="@id/iv_recruit_location"
-            app:layout_constraintTop_toBottomOf="@id/iv_recruit_period"
+            app:layout_constraintTop_toBottomOf="@id/tv_recruit_period"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="20dp"
             android:layout_marginTop="8dp"
             />
 
@@ -195,11 +196,8 @@
             android:layout_gravity="center"
             app:layout_constraintTop_toTopOf="@id/iv_recruit_people"
             app:layout_constraintStart_toEndOf="@id/iv_recruit_day"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="24dp"
             />
-
-
+        
         <ImageView
             android:id="@+id/iv_goto_recruit"
             android:layout_width="wrap_content"
@@ -207,6 +205,7 @@
             android:src="@drawable/ic_goto_recruit"
             android:padding="4dp"
             android:visibility="visible"
+            android:layout_marginTop="-2dp"
             app:layout_constraintTop_toTopOf="@id/iv_service_recruit_user"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="20dp"/>
@@ -218,10 +217,7 @@
             android:src="@drawable/ic_service_delete"
             app:layout_constraintTop_toBottomOf="@id/iv_goto_recruit"
             app:layout_constraintStart_toStartOf="@id/iv_goto_recruit"
-            android:padding="4dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toTopOf="@id/tv_recruit_period"
-            android:layout_marginBottom="8dp"/>
+            android:padding="4dp" />
 
 
         <View
