--- a/app/src/main/res/layout/item_service_participated.xml
+++ b/app/src/main/res/layout/item_service_participated.xml
@@ -1,83 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout>
+    <data>
+        <variable
+            name="viewModel"
+            type="com.sharehands.sharehands_frontend.viewmodel.mypage.ServiceMgtViewModel" />
+    </data>
 
-    <ImageView
-        android:id="@+id/iv_service_preview_thumbnail"
-        android:layout_width="92dp"
-        android:layout_height="92dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/frame_preview_thumbnail"
-        android:clipToOutline="true"
-        android:scaleType="centerCrop"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="12dp"
-        />
-
-    <ImageView
-        android:id="@+id/iv_service_preview_user"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        app:layout_constraintStart_toEndOf="@id/iv_service_preview_thumbnail"
-        app:layout_constraintTop_toTopOf="@id/iv_service_preview_thumbnail"
-        android:background="@drawable/frame_preview_profile"
-        android:layout_marginStart="20dp"
-        android:scaleType="centerCrop"
-        android:clipToOutline="true"/>
-
-    <TextView
-        android:id="@+id/tv_service_preview_user"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/iv_service_preview_user"
-        app:layout_constraintBottom_toBottomOf="@id/iv_service_preview_user"
-        app:layout_constraintStart_toEndOf="@id/iv_service_preview_user"
-        android:layout_marginStart="8dp"
-        tools:text="닉네임"
-        android:textSize="12sp"
-        android:textColor="@color/text_color"/>
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/iv_preview_cert"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        app:layout_constraintTop_toTopOf="@id/iv_service_preview_user"
-        app:layout_constraintBottom_toBottomOf="@id/iv_service_preview_user"
-        app:layout_constraintStart_toEndOf="@id/tv_service_preview_user"
-        android:layout_marginStart="8dp"
-        android:src="@drawable/ic_cert"
-        android:visibility="gone"/>
+        <ImageView
+            android:id="@+id/iv_service_preview_thumbnail"
+            android:layout_width="92dp"
+            android:layout_height="92dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/frame_preview_thumbnail"
+            android:clipToOutline="true"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="12dp"
+            />
 
-    <TextView
-        android:id="@+id/tv_preview_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/iv_service_preview_user"
-        app:layout_constraintTop_toBottomOf="@id/iv_service_preview_user"
-        android:layout_marginTop="4dp"
-        tools:text="봉사활동명"
-        android:textColor="@color/text_color"
-        android:textStyle="bold"
-        android:textSize="16sp"/>
+        <ImageView
+            android:id="@+id/iv_service_preview_user"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            app:layout_constraintStart_toEndOf="@id/iv_service_preview_thumbnail"
+            app:layout_constraintTop_toTopOf="@id/iv_service_preview_thumbnail"
+            android:background="@drawable/frame_preview_profile"
+            android:layout_marginStart="20dp"
+            android:scaleType="centerCrop"
+            android:clipToOutline="true"/>
 
+        <TextView
+            android:id="@+id/tv_service_preview_user"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/iv_service_preview_user"
+            app:layout_constraintBottom_toBottomOf="@id/iv_service_preview_user"
+            app:layout_constraintStart_toEndOf="@id/iv_service_preview_user"
+            android:layout_marginStart="8dp"
+            tools:text="닉네임"
+            android:textSize="12sp"
+            android:textColor="@color/text_color"/>
 
-    <LinearLayout
-        android:id="@+id/layout_info1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/tv_preview_title"
-        app:layout_constraintStart_toStartOf="@id/tv_preview_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        >
+        <ImageView
+            android:id="@+id/iv_preview_cert"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            app:layout_constraintTop_toTopOf="@id/iv_service_preview_user"
+            app:layout_constraintBottom_toBottomOf="@id/iv_service_preview_user"
+            app:layout_constraintStart_toEndOf="@id/tv_service_preview_user"
+            android:layout_marginStart="8dp"
+            android:src="@drawable/ic_cert"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/tv_preview_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/iv_service_preview_user"
+            app:layout_constraintTop_toBottomOf="@id/iv_service_preview_user"
+            app:layout_constraintEnd_toStartOf="@id/iv_write_review"
+            android:layout_marginEnd="12dp"
+            android:layout_marginTop="4dp"
+            android:maxLines="2"
+            android:ellipsize="end"
+            tools:text="봉사활동명"
+            android:textColor="@color/text_color"
+            android:textStyle="bold"
+            android:textSize="16sp"/>
+
 
         <ImageView
             android:id="@+id/iv_preview_location"
@@ -86,6 +83,10 @@
             android:src="@drawable/ic_location"
             android:layout_gravity="start"
             android:layout_weight="0.5"
+            app:tint="@color/sharehands_green_medium"
+            app:layout_constraintTop_toBottomOf="@id/tv_preview_title"
+            app:layout_constraintStart_toStartOf="@id/tv_preview_title"
+            android:layout_marginTop="8dp"
             />
 
         <TextView
@@ -101,6 +102,11 @@
             android:layout_gravity="center"
             android:maxLength="12"
             android:ellipsize="end"
+            app:layout_constraintStart_toEndOf="@id/iv_preview_location"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_location"
+            app:layout_constraintBottom_toBottomOf="@id/iv_preview_location"
+            android:layout_marginStart="8dp"
+
             />
 
         <ImageView
@@ -109,38 +115,34 @@
             android:layout_height="16dp"
             android:src="@drawable/ic_schedule"
             android:layout_weight="0.5"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_location"
+            app:layout_constraintBottom_toBottomOf="@id/iv_preview_location"
+            app:layout_constraintStart_toEndOf="@id/tv_preview_location"
+            android:layout_marginStart="16dp"
             />
 
         <TextView
             android:id="@+id/tv_preview_period"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             tools:text="2023.01.01 ~ 2023. 01.01"
-            android:maxLength="24"
+            android:maxLength="30"
             android:textSize="11sp"
             android:textStyle="bold"
             android:textColor="@color/text_color"
-            android:maxLines="1"
+            android:maxLines="2"
             android:ellipsize="end"
-            android:layout_marginStart="2dp"
+            android:layout_marginStart="8dp"
             android:gravity="start"
             android:layout_weight="2"
             android:layout_gravity="center"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_location"
+            app:layout_constraintStart_toEndOf="@id/iv_preview_period"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="20dp"
+
             />
 
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layout_info2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/layout_info1"
-        app:layout_constraintStart_toStartOf="@id/tv_preview_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp">
 
         <ImageView
             android:id="@+id/iv_preview_people"
@@ -149,6 +151,11 @@
             android:src="@drawable/ic_people"
             android:layout_gravity="start"
             android:layout_weight="0.15"
+            app:layout_constraintTop_toBottomOf="@id/tv_preview_period"
+            app:layout_constraintStart_toStartOf="@id/tv_preview_title"
+            android:layout_marginTop="6dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="20dp"
             />
 
         <TextView
@@ -164,6 +171,9 @@
             android:layout_gravity="center"
             android:maxLength="12"
             android:ellipsize="end"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_people"
+            app:layout_constraintStart_toEndOf="@id/iv_preview_people"
+            android:layout_marginStart="8dp"
             />
 
         <ImageView
@@ -171,8 +181,11 @@
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:src="@drawable/ic_clock"
-            app:tint="@color/sharehands_green_strong"
+            app:tint="@color/sharehands_green_medium"
             android:layout_weight="0.25"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_people"
+            app:layout_constraintBottom_toBottomOf="@id/iv_preview_people"
+            app:layout_constraintStart_toStartOf="@id/iv_preview_period"
             />
 
         <TextView
@@ -185,37 +198,40 @@
             android:textColor="@color/text_color"
             android:maxLines="1"
             android:ellipsize="end"
-            android:layout_marginStart="2dp"
+            android:layout_marginStart="8dp"
             android:gravity="start"
             android:layout_weight="2"
             android:layout_gravity="center"
+            app:layout_constraintTop_toTopOf="@id/iv_preview_people"
+            app:layout_constraintBottom_toBottomOf="@id/iv_preview_people"
+            app:layout_constraintStart_toEndOf="@id/iv_preview_day"
             />
 
 
-    </LinearLayout>
 
-    <ImageView
-        android:id="@+id/iv_write_review"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:src="@drawable/ic_review_write"
-        android:padding="4dp"
-        />
+        <ImageView
+            android:id="@+id/iv_write_review"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
+            android:src="@drawable/ic_review_write"
+            android:padding="4dp"
+            />
 
-    <View
-        android:id="@+id/view_line"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
-        android:background="@color/sharehands_gray"
-        />
+        <View
+            android:id="@+id/view_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:background="@color/sharehands_gray"
+            />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
