--- a/app/src/main/res/layout/item_service_search.xml
+++ b/app/src/main/res/layout/item_service_search.xml
@@ -16,12 +16,11 @@
             android:layout_height="92dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:background="@drawable/frame_preview_thumbnail"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
-            android:layout_marginBottom="16dp"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
             />
 
         <ImageView
